--- a/index.Rmd
+++ b/index.Rmd
@@ -2,12 +2,12 @@
 title: "The Other 14"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: columns
+    orientation: rows
     vertical_layout: fill
     source_code: embed
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, warning = FALSE}
 library(flexdashboard)
 library(DT)
 library(tidyverse)
@@ -19,7 +19,7 @@ LaLiga_raw_data <- read_csv("data/sportsref_download_LaLiga_210419.csv")
 SerieA_raw_data <- read_csv("data/sportsref_download_SerieA_210419.csv")
 ```
 
-Column {.tabset}
+Row {.tabset}
 -----------------------------------------------------------------------
 
 ### English Premier League
@@ -29,9 +29,7 @@ PL_raw_data %>%
   Tidy_Data() %>%
   Updated_League_Table() %>%
   filter(Points_Gain >= 0) %>%
-  DT::datatable(rownames = T,
-                options = list(scroller = TRUE)
-  )
+  Create_DataTable()
 ```
 
 ### Italian Serie A
@@ -41,9 +39,7 @@ SerieA_raw_data %>%
   Tidy_Data() %>%
   Updated_League_Table() %>%
   filter(Points_Gain >= 0) %>%
-  DT::datatable(rownames = T,
-                options = list(scroller = TRUE)
-  )
+  Create_DataTable()
 ```
 
 ### Spanish La Liga
@@ -53,17 +49,5 @@ LaLiga_raw_data %>%
   Tidy_Data() %>%
   Updated_League_Table() %>%
   filter(Points_Gain >= 0) %>%
-  DT::datatable(rownames = T,
-                options = list(scroller = TRUE)
-  )
+  Create_DataTable()
 ```
-
-Column
------------------------------------------------------------------------
-
-### Chart B
-
-```{r}
-
-```
-
